@@ -1,5 +1,6 @@
 package org.apereo.cas.authentication.principal;
 
+import org.apereo.cas.util.MockRequestContext;
 import org.apereo.cas.web.BaseDelegatedAuthenticationTests;
 import org.apereo.cas.web.flow.DelegatedClientAuthenticationConfigurationContext;
 
@@ -10,13 +11,7 @@ import org.pac4j.core.credentials.TokenCredentials;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.boot.test.context.SpringBootTest;
-import org.springframework.mock.web.MockHttpServletRequest;
-import org.springframework.mock.web.MockHttpServletResponse;
-import org.springframework.mock.web.MockServletContext;
-import org.springframework.webflow.context.ExternalContextHolder;
-import org.springframework.webflow.context.servlet.ServletExternalContext;
-import org.springframework.webflow.execution.RequestContextHolder;
-import org.springframework.webflow.test.MockRequestContext;
+
 
 import java.util.UUID;
 
@@ -37,12 +32,7 @@ class DelegatedClientAuthenticationCredentialResolverTests {
 
     @Test
     void verifyOperation() throws Throwable {
-        val context = new MockRequestContext();
-        val request = new MockHttpServletRequest();
-        val response = new MockHttpServletResponse();
-        context.setExternalContext(new ServletExternalContext(new MockServletContext(), request, response));
-        RequestContextHolder.setRequestContext(context);
-        ExternalContextHolder.setExternalContext(context.getExternalContext());
+        val context = MockRequestContext.create();
 
         val resolver = new TestBaseDelegatedClientAuthenticationCredentialResolver(configurationContext);
         val credentials = new TokenCredentials(UUID.randomUUID().toString());
@@ -50,7 +40,7 @@ class DelegatedClientAuthenticationCredentialResolverTests {
         assertTrue(resolver.supports(clientCredential));
         val results = resolver.resolve(context, clientCredential);
         assertEquals(1, results.size());
-        val profile = results.get(0);
+        val profile = results.getFirst();
         assertEquals("casuser-linked", profile.getLinkedId());
         assertEquals("casuser", profile.getId());
         assertTrue(profile.getAttributes().containsKey("memberOf"));
