@@ -16,7 +16,9 @@ import org.junit.jupiter.api.Test;
 import org.opensaml.saml.common.xml.SAMLConstants;
 import org.opensaml.saml.saml2.core.AttributeQuery;
 import org.opensaml.saml.saml2.core.AuthnRequest;
+import org.opensaml.saml.saml2.core.Extensions;
 import org.opensaml.saml.saml2.core.NameIDType;
+import org.opensaml.saml.saml2.core.RequesterID;
 import org.opensaml.saml.saml2.core.Response;
 import org.opensaml.xmlsec.encryption.support.EncryptionConstants;
 import org.opensaml.xmlsec.signature.support.SignatureConstants;
@@ -145,8 +147,8 @@ class SamlProfileSaml2ResponseBuilderTests extends BaseSamlIdPConfigurationTests
         assertNotNull(samlResponse);
         val assertions = samlResponse.getAssertions();
         assertFalse(assertions.isEmpty());
-        assertNull(assertions.get(0).getSubject().getNameID());
-        assertNotNull(assertions.get(0).getSubject().getEncryptedID());
+        assertNull(assertions.getFirst().getSubject().getNameID());
+        assertNotNull(assertions.getFirst().getSubject().getEncryptedID());
     }
 
     @Test
@@ -210,7 +212,7 @@ class SamlProfileSaml2ResponseBuilderTests extends BaseSamlIdPConfigurationTests
         val samlResponse = buildResponse(request, response, service,
             adaptor, authnRequest, assertion, SAMLConstants.SAML2_POST_BINDING_URI);
         assertNotNull(samlResponse);
-        assertEquals(SignatureConstants.ALGO_ID_SIGNATURE_RSA_SHA1, samlResponse.getAssertions().get(0).getSignature().getSignatureAlgorithm());
+        assertEquals(SignatureConstants.ALGO_ID_SIGNATURE_RSA_SHA1, samlResponse.getAssertions().getFirst().getSignature().getSignatureAlgorithm());
         assertEquals(SignatureConstants.ALGO_ID_SIGNATURE_RSA_SHA1, samlResponse.getSignature().getSignatureAlgorithm());
     }
 
@@ -246,7 +248,7 @@ class SamlProfileSaml2ResponseBuilderTests extends BaseSamlIdPConfigurationTests
         val samlResponse = buildResponse(request, response, service,
             adaptor, authnRequest, assertion, SAMLConstants.SAML2_POST_BINDING_URI);
         assertNotNull(samlResponse);
-        assertEquals(SignatureConstants.ALGO_ID_SIGNATURE_RSA_SHA256, samlResponse.getAssertions().get(0).getSignature().getSignatureAlgorithm());
+        assertEquals(SignatureConstants.ALGO_ID_SIGNATURE_RSA_SHA256, samlResponse.getAssertions().getFirst().getSignature().getSignatureAlgorithm());
         assertEquals(SignatureConstants.ALGO_ID_SIGNATURE_RSA_SHA256, samlResponse.getSignature().getSignatureAlgorithm());
     }
 
@@ -274,7 +276,7 @@ class SamlProfileSaml2ResponseBuilderTests extends BaseSamlIdPConfigurationTests
         assertTrue(samlResponse.getAssertions().isEmpty());
         assertFalse(samlResponse.getEncryptedAssertions().isEmpty());
         assertEquals(EncryptionConstants.ALGO_ID_BLOCKCIPHER_AES128,
-            samlResponse.getEncryptedAssertions().get(0).getEncryptedData().getEncryptionMethod().getAlgorithm());
+            samlResponse.getEncryptedAssertions().getFirst().getEncryptedData().getEncryptionMethod().getAlgorithm());
     }
 
     @Test
@@ -301,7 +303,7 @@ class SamlProfileSaml2ResponseBuilderTests extends BaseSamlIdPConfigurationTests
         assertTrue(samlResponse.getAssertions().isEmpty());
         assertFalse(samlResponse.getEncryptedAssertions().isEmpty());
         assertEquals(EncryptionConstants.ALGO_ID_BLOCKCIPHER_AES128_GCM,
-            samlResponse.getEncryptedAssertions().get(0).getEncryptedData().getEncryptionMethod().getAlgorithm());
+            samlResponse.getEncryptedAssertions().getFirst().getEncryptedData().getEncryptionMethod().getAlgorithm());
     }
 
     @Test
@@ -325,6 +327,31 @@ class SamlProfileSaml2ResponseBuilderTests extends BaseSamlIdPConfigurationTests
         assertNotNull(samlResponse);
         assertFalse(samlResponse.getAssertions().isEmpty());
         assertTrue(samlResponse.getEncryptedAssertions().isEmpty());
+    }
+
+    @Test
+    void verifySamlResponseForUnsolicitedRequest() throws Throwable {
+        val request = buildHttpRequest();
+        val response = new MockHttpServletResponse();
+
+        val service = getSamlRegisteredServiceForTestShib(false, false);
+        val adaptor = SamlRegisteredServiceMetadataAdaptor.get(samlRegisteredServiceCachingMetadataResolver,
+            service, service.getServiceId()).get();
+
+        val authnRequest = getAuthnRequestFor(service);
+        val extensions = samlProfileSamlResponseBuilder.newSamlObject(Extensions.class);
+        val requesterID = samlProfileSamlResponseBuilder.newSamlObject(RequesterID.class);
+        requesterID.setURI(casProperties.getAuthn().getSamlIdp().getCore().getEntityId());
+        extensions.getUnknownXMLObjects().add(requesterID);
+        authnRequest.setExtensions(extensions);
+        val assertion = getAssertion();
+        val samlResponse = buildResponse(request, response, service,
+            adaptor, authnRequest, assertion, SAMLConstants.SAML2_POST_BINDING_URI);
+        assertNotNull(samlResponse);
+        assertNull(samlResponse.getInResponseTo());
+        val subject = samlResponse.getAssertions().getFirst().getSubject();
+        val subjectConfirmation = subject.getSubjectConfirmations().getFirst();
+        assertNull(subjectConfirmation.getSubjectConfirmationData().getInResponseTo());
     }
 
     private MockHttpServletRequest buildHttpRequest() throws Exception {
