@@ -45,6 +45,7 @@ import org.pac4j.core.profile.CommonProfile;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.boot.autoconfigure.mail.MailSenderAutoConfiguration;
+import org.springframework.boot.autoconfigure.web.servlet.WebMvcAutoConfiguration;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.boot.test.context.TestConfiguration;
 import org.springframework.cloud.autoconfigure.RefreshAutoConfiguration;
@@ -63,6 +64,7 @@ import static org.junit.jupiter.api.Assertions.*;
  */
 @SpringBootTest(classes = {
     RefreshAutoConfiguration.class,
+    WebMvcAutoConfiguration.class,
     MailSenderAutoConfiguration.class,
     CasCoreAuthenticationPrincipalConfiguration.class,
     CasCoreAuthenticationPolicyConfiguration.class,
@@ -117,7 +119,7 @@ class TokenAuthenticationHandlerTests {
             CoreAuthenticationTestUtils.getAuthenticationTransactionFactory().newTransaction(service));
         val authentication = authenticationBuilder.build();
         assertTrue(authentication.getAttributes().containsKey(TokenConstants.PARAMETER_NAME_TOKEN));
-        val token = authentication.getAttributes().get(TokenConstants.PARAMETER_NAME_TOKEN).get(0).toString();
+        val token = authentication.getAttributes().get(TokenConstants.PARAMETER_NAME_TOKEN).getFirst().toString();
         val credential = new TokenCredential(token, service);
         val result = tokenAuthenticationHandler.authenticate(credential, credential.getService());
         assertEquals(result.getPrincipal().getId(), authentication.getPrincipal().getId());
